Setup sample page

--- a/XamarinCommunityToolkitSample/Pages/Behaviors/AutoGridLayoutBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/AutoGridLayoutBehaviorPage.xaml
@@ -2,12 +2,52 @@
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
           xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages;assembly=Xamarin.CommunityToolkit.Sample"
+          xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
+          xmlns:behaviors1="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Behaviors;assembly=Xamarin.CommunityToolkit.Sample"
           x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.AutoGridLayoutBehaviorPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+    <StackLayout>
+        <StackLayout Orientation="Horizontal" Spacing="5">
+            <Button Text="Add Row" Clicked="ButtonAddRow_OnClicked"></Button>
+            <Button Text="Add Column" Clicked="ButtonAddColumn_OnClicked"></Button>
+            <Button Text="Remove Row" Clicked="ButtonRemoveRow_OnClicked"></Button>
+            <Button Text="Remove Column" Clicked="ButtonRemoveColumn_OnClicked"></Button>
         </StackLayout>
-    </ContentPage.Content>
+
+        <Label Text="View's row and column are determined by the order they are added to the grid's children.  RowSpan and ColumnSpan are honored."></Label>
+
+        <Grid x:Name="TestGrid" Margin="30" BackgroundColor="Gray">
+            <Grid.Behaviors>
+                <behaviors:AutoGridLayoutBehavior/>
+            </Grid.Behaviors>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <behaviors1:AutoGridLayoutBehaviorTestLabel Grid.RowSpan="2"/>
+            <behaviors1:AutoGridLayoutBehaviorTestLabel />
+            <behaviors1:AutoGridLayoutBehaviorTestLabel />
+
+            <behaviors1:AutoGridLayoutBehaviorTestLabel Grid.ColumnSpan="2"/>
+            <behaviors1:AutoGridLayoutBehaviorTestLabel/>
+
+            <behaviors1:AutoGridLayoutBehaviorTestLabel />
+            <behaviors1:AutoGridLayoutBehaviorTestLabel Grid.ColumnSpan="2" Grid.RowSpan="2" />
+            <behaviors1:AutoGridLayoutBehaviorTestLabel />
+
+            <behaviors1:AutoGridLayoutBehaviorTestLabel />
+            <behaviors1:AutoGridLayoutBehaviorTestLabel />
+            <behaviors1:AutoGridLayoutBehaviorTestLabel />
+
+        </Grid>
+
+    </StackLayout>
 </pages:BasePage>
