--- a/XamarinCommunityToolkitSample/Pages/Behaviors/ImpliedOrderGridBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/ImpliedOrderGridBehaviorPage.xaml
@@ -4,16 +4,17 @@
           xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages;assembly=Xamarin.CommunityToolkit.Sample"
           xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
           xmlns:behaviors1="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages.Behaviors;assembly=Xamarin.CommunityToolkit.Sample"
+          xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
           x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.ImpliedOrderGridBehaviorPage">
     <StackLayout>
-        <StackLayout Orientation="Horizontal" Spacing="5">
+        <StackLayout Orientation="Horizontal" Spacing="5" Margin="10">
             <Button Text="Add Row" Clicked="ButtonAddRow_OnClicked"></Button>
             <Button Text="Add Column" Clicked="ButtonAddColumn_OnClicked"></Button>
             <Button Text="Remove Row" Clicked="ButtonRemoveRow_OnClicked"></Button>
             <Button Text="Remove Column" Clicked="ButtonRemoveColumn_OnClicked"></Button>
         </StackLayout>
 
-        <Label Text="View's row and column are determined by the order they are added to the grid's children. RowSpan and ColumnSpan are honored."></Label>
+        <Label Padding="10,10,10,50" Text="{rsx:Translate ImpliedOrderGridDescriptionLabel}" />
 
         <Grid x:Name="TestGrid" Margin="30" BackgroundColor="Gray">
             <Grid.Behaviors>
