--- a/XamarinCommunityToolkitSample/Pages/Views/ActionsPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/ActionsPage.xaml
@@ -4,7 +4,7 @@
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:extensions="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ActionsPage">
-    <StackLayout>
+    <StackLayout Spacing="10" Margin="20">
         <Button Clicked="Button1_Clicked" Text="{extensions:Translate ShowSnackbarWithActionButton}"></Button>
         <Button Clicked="Button2_Clicked" Text="{extensions:Translate ShowSnackbarNoActionButton}"></Button>
         <Label x:Name="StatusText"></Label>
