--- a/XamarinCommunityToolkitSample/Pages/Effects/FormattedTextEffectPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Effects/FormattedTextEffectPage.xaml
@@ -1,12 +1,21 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.FormattedTextEffectPage"
-             xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
+                xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.Effects;assembly=Xamarin.CommunityToolkit"
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.FormattedTextEffectPage"
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
 
     <ScrollView>
         <StackLayout>
-            <Entry Text="Hello World" />
+            <Label Text="Standard Usage - Formatted Text Defined in XAML" />
+            <Entry>
+                <xct:FormattedTextEffect.FormattedText>
+                    <FormattedString>
+                        <Span Text="Hello " TextColor="Red" />
+                        <Span Text="World" TextColor="Purple" />
+                    </FormattedString>
+                </xct:FormattedTextEffect.FormattedText>
+            </Entry>
         </StackLayout>
     </ScrollView>
     
