--- a/XamarinCommunityToolkitSample/Pages/Behaviors/AnimationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/AnimationBehaviorPage.xaml
@@ -9,10 +9,10 @@
         <StackLayout Padding="{StaticResource ContentPadding}"
                      Spacing="10">
 
-            <Label Text="{rsx:Translate AnimationBehaviorTitle}"
+            <Label Text="This sample demonstrates how to use ViewTappedAnimationBehaviour applying it in different UI elements."
                    Padding="10,10,10,50"/>
 
-            <Button Text="{rsx:Translate TestingFadeAnimation}"
+            <Button Text="Testing Fade Animation"
                    TextColor="HotPink">
                  <Button.Behaviors>
                       <behaviors:AnimationBehavior EventName="Clicked">
