--- a/XamarinCommunityToolkitSample/Pages/Behaviors/EmailValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/EmailValidationBehaviorPage.xaml
@@ -15,7 +15,7 @@
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
-        <Label Text="{rsx:Translate EmailValidationDescription}" />
+        <Label Text="Text color will change accordingly to the style that is configured when a invalid value (email address) is entered." />
         <Entry Placeholder="Email">
             <Entry.Behaviors>
                 <behaviors:EmailValidationBehavior DecorationFlags="Trim" InvalidStyle="{StaticResource InvalidEntryStyle}"/>
