--- a/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/EventToCommandBehaviorPage.xaml
@@ -14,9 +14,9 @@
     <ContentView Padding="{StaticResource ContentPadding}">
         <StackLayout VerticalOptions="CenterAndExpand"
                      Spacing="20">
-            <Label Text="{rsx:Translate EventToCommandBehaviorDescription}" />
+            <Label Text="This sample demonstrates how to use EventToCommandBehavior. Here we observe Clicked event of the button and trigger IncrementCommand from ViewModel." />
             <Label Text="{Binding ClickCount, StringFormat='{0} clicks'}" />
-            <Button Text="{rsx:Translate ClickMe}"
+            <Button Text="Click Me"
                     TextColor="White"
                     BackgroundColor="{StaticResource NormalButtonBackgroundColor}">
                 <Button.Behaviors>
