--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MaxLengthReachedBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MaxLengthReachedBehaviorPage.xaml
@@ -22,14 +22,14 @@
                 <Frame Margin="{StaticResource ContentPadding}"
                        CornerRadius="10">
                     <Grid ColumnDefinitions="2*, *">
-                        <Label Text="{x:Static resources:AppResources.MaxLengthReachedBehaviorMaxLengthSettingLabel}"
+                        <Label Text="MaxLength setting on Entry field"
                                VerticalTextAlignment="Center" />
                         <Entry x:Name="MaxLengthSetting"
                                Text="6"
                                Keyboard="Numeric"
                                Grid.Column="1" />
 
-                        <Label Text="{x:Static resources:AppResources.UserStoppedTypingBehaviorDismissKeyboardOptionLabel}"
+                        <Label Text="Should dismiss keyboard automatically"
                                VerticalTextAlignment="Center"
                                Grid.Row="1" />
                         <Switch x:Name="AutoDismissKeyboardSetting"
@@ -40,10 +40,10 @@
                 </Frame>
 
                 <!-- First Scenario -->
-                <Label Text="{x:Static resources:AppResources.MaxLengthReachedBehaviorFirstScenarioDescription}"
+                <Label Text="When the MaxLength of the first Entry has been reached, the focus will be set to the next Entry field."
                        Margin="{StaticResource ContentPadding}" />
 
-                <Entry Placeholder="{x:Static resources:AppResources.MaxLengthReachedBehaviorEntryPlaceholder}"
+                <Entry Placeholder="Start typing until MaxLength is reached..."
                        MaxLength="{Binding Path=Text, Source={x:Reference MaxLengthSetting}}"
                        Margin="{StaticResource ContentPadding}">
                     <Entry.Behaviors>
@@ -53,15 +53,15 @@
                 </Entry>
 
                 <Entry x:Name="nextEntry"
-                       Placeholder="{x:Static resources:AppResources.MaxLengthReachedBehaviorNextEntryPlaceholder}"
+                       Placeholder="This Entry will then get focus..."
                        Margin="{StaticResource ContentPadding}" />
 
 
                 <!-- Second Scenario -->
-                <Label Text="{x:Static resources:AppResources.MaxLengthReachedBehaviorSecondScenarioDescription}"
+                <Label Text="When the MaxLength of this Entry is reached, a Command is executed. Below are all Command executions shown."
                        Margin="{StaticResource ContentPadding}" />
                 
-                <Entry Placeholder="{x:Static resources:AppResources.MaxLengthReachedBehaviorEntryPlaceholder}"
+                <Entry Placeholder="Start typing until MaxLength is reached..."
                        MaxLength="{Binding Path=Text, Source={x:Reference MaxLengthSetting}}"
                        Margin="{StaticResource ContentPadding}">
                     <Entry.Behaviors>
