--- a/XamarinCommunityToolkitSample/Pages/Behaviors/NumericValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/NumericValidationBehaviorPage.xaml
@@ -3,8 +3,7 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.NumericValidationBehaviorPage"
-                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit">
+                xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages">
 
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
@@ -15,7 +14,7 @@
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
-        <Label Text="{rsx:Translate NumericValidationBehaviorDescription}" />
+        <Label Text="Text color will be changed according to the configured style in case of an invalid numeric format or when the numeric value is outside of the configured boundaries (min: 1.0, max: 100.0). Maximum decimal places value equals 2." />
         <Entry Placeholder="Number">
             <Entry.Behaviors>
                 <behaviors:NumericValidationBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"
