--- a/XamarinCommunityToolkitSample/Pages/Behaviors/RequiredStringValidationBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/RequiredStringValidationBehaviorPage.xaml
@@ -3,9 +3,7 @@
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages;assembly=Xamarin.CommunityToolkit.Sample"
-             xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
              xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
-             xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Behaviors;assembly=Xamarin.CommunityToolkit.Sample"
              x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.RequiredStringValidationBehaviorPage">
     <pages:BasePage.Resources>
         <Style x:Key="InvalidEntryStyle" TargetType="Entry"> 
@@ -15,9 +13,9 @@
     <StackLayout Padding="{StaticResource ContentPadding}"
                  Spacing="50"
                  VerticalOptions="CenterAndExpand">
-        <Label Text="{rsx:Translate RequiredStringValidationDescription}" />
-        <Entry x:Name="passwordEntry" Placeholder="{rsx:Translate Password}" />
-            <Entry Placeholder="{rsx:Translate ConfirmPassword}">
+        <Label Text="Text color will change accordingly to the style that is configured when password confirmation doesn't match password." />
+        <Entry x:Name="passwordEntry" Placeholder="Password" />
+            <Entry Placeholder="Confirm Password">
                 <Entry.Behaviors>
                     <behaviors:RequiredStringValidationBehavior InvalidStyle="{StaticResource InvalidEntryStyle}"
                                                        Flags="ValidateOnValueChanging"
