--- a/XamarinCommunityToolkitSample/Pages/Converters/MultiConverterPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Converters/MultiConverterPage.xaml
@@ -5,8 +5,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.Converters;assembly=Xamarin.CommunityToolkit"
     xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Converters"
-    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.MultiConverterPage"
-    xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx">
+    x:Class="Xamarin.CommunityToolkit.Sample.Pages.Converters.MultiConverterPage">
     <pages:BasePage.Resources>
         <ResourceDictionary>
             <xct:MultiConverter
@@ -30,12 +29,15 @@
         <vm:MultiConverterViewModel />
     </pages:BasePage.BindingContext>
     <pages:BasePage.Content>
-        <StackLayout
-            Padding="20"
-            Spacing="20"
-            >
-            <Label
-                Text="{x:Static resources:AppResources.MultiConverterDescription}" />
+        <StackLayout Padding="20" Spacing="20">
+            <Label>
+                <Label.Text>
+This sample demonstrates how to use the MultiBinding Converter with the NotEqualConverter and the TextCaseConverter. 
+
+It converts the entered text to Upper Case and checks that it is Not Equal to the string 'ANDREI'.
+
+                </Label.Text>
+            </Label>
             <Entry
                 Text="{Binding EnteredName}"></Entry>
             <Label
