--- a/XamarinCommunityToolkitSample/Pages/Views/ActionsPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/ActionsPage.xaml
@@ -2,12 +2,11 @@
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:extensions="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ActionsPage">
     <StackLayout Spacing="10" Margin="20">
-        <Button Clicked="DisplaySnackBarClicked" Text="{extensions:Translate ShowSnackBarWithActionButton}"></Button>
-        <Button Clicked="DisplayToastClicked" Text="{extensions:Translate ShowSnackBarNoActionButton}"></Button>
-        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="{extensions:Translate ShowSnackBarWithActionButton}"></Button>
+        <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"></Button>
+        <Button Clicked="DisplayToastClicked" Text="Show toast"></Button>
+        <Button Clicked="DisplaySnackBarAdvancedClicked" Text="Show SnackBar"></Button>
         <Label x:Name="StatusText"></Label>
     </StackLayout>
 </pages:BasePage>
