--- a/XamarinCommunityToolkitSample/Pages/Views/ExpanderPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/ExpanderPage.xaml
@@ -4,7 +4,6 @@
                 xmlns:views="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
                 xmlns:viewmodels="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Views"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ExpanderPage"
-                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 x:Name="page">
 
@@ -24,13 +23,13 @@
                         <views:Expander.Header>
                             <StackLayout Orientation="Horizontal" Spacing="0">
                                 <Label Text="{Binding Name}" HorizontalOptions="FillAndExpand" FontSize="32" FontAttributes="Bold"/>
-                                <Label Text="{rsx:Translate EnableNested}" FontSize="13" VerticalOptions="CenterAndExpand" />
+                                <Label Text="Enable nested:" FontSize="13" VerticalOptions="CenterAndExpand" />
                                 <Switch IsToggled="{Binding IsEnabled}" />
                             </StackLayout>
                         </views:Expander.Header>
                         <views:Expander IsEnabled="{Binding IsEnabled}">
                             <views:Expander.Header>
-                                <Label Text="{rsx:Translate NestedExpander}" FontSize="30" FontAttributes="Bold"/>
+                                <Label Text="Nested expander" FontSize="30" FontAttributes="Bold"/>
                             </views:Expander.Header>
                             <views:Expander.ContentTemplate>
                                 <DataTemplate>
