--- a/XamarinCommunityToolkitSample/Pages/Views/SnackBarPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/SnackBarPage.xaml
@@ -2,7 +2,7 @@
 <pages:BasePage xmlns="http://xamarin.com/schemas/2014/forms"
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ActionsPage">
+                x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.SnackBarPage">
     <StackLayout Spacing="10" Margin="20">
         <Button Clicked="DisplaySnackBarClicked" Text="Show SnackBar"></Button>
         <Button Clicked="DisplayToastClicked" Text="Show toast"></Button>
