Added some extra samples of the Shield view with some difference font options used

--- a/XamarinCommunityToolkitSample/Pages/Views/ShieldPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/ShieldPage.xaml
@@ -1,32 +1,78 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <pages:BasePage
- xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
+    xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
     x:Class="Xamarin.CommunityToolkit.Sample.Pages.Views.ShieldPage"
     Title="Shield">
+
     <StackLayout
-        Orientation="Horizontal"
-        Padding="12">
-        <controls:Shield
-            Subject="C#"
-            Status=">=4.5"
-            Color="DodgerBlue"
-            TextColor="White"
-            Margin="2, 0"
-            Tapped="OnShieldTapped"/>
-        <controls:Shield
-            Subject="IDE"
-            Status="2019"
-            Color="DodgerBlue"
-            TextColor="White"
-            Margin="2, 0"/>
-        <controls:Shield
-            Subject="chat"
-            Status="on discord"
-            Color="SeaGreen"
-            TextColor="White"
-            Margin="2, 0"/>
+        Spacing="10">
+
+        <StackLayout
+            Orientation="Horizontal">
+
+            <controls:Shield
+                Subject="C#"
+                Status=">=4.5"
+                Color="DodgerBlue"
+                TextColor="White"
+                Margin="2,0"
+                Tapped="OnShieldTapped" />
+
+            <controls:Shield
+                Subject="IDE"
+                Status="2019"
+                Color="DodgerBlue"
+                TextColor="White"
+                Margin="2,0" />
+
+            <controls:Shield
+                Subject="chat"
+                Status="on discord"
+                Color="SeaGreen"
+                TextColor="White"
+                Margin="2,0" />
+        </StackLayout>
+
+        <StackLayout
+            Orientation="Horizontal">
+
+            <controls:Shield
+                Subject="IDE"
+                Status="2019"
+                Color="DodgerBlue"
+                TextColor="White"
+                FontSize="20"
+                Margin="2,0" />
+
+            <controls:Shield
+                Subject="IDE"
+                Status="2019"
+                Color="DodgerBlue"
+                TextColor="White"
+                FontSize="Title"
+                Margin="2,0" />
+
+            <controls:Shield
+                Subject="IDE"
+                Status="2019"
+                Color="DodgerBlue"
+                TextColor="White"
+                FontAttributes="Bold"
+                Margin="2,0" />
+
+            <controls:Shield
+                Subject="IDE"
+                Status="2019"
+                Color="DodgerBlue"
+                TextColor="White"
+                FontAttributes="Italic"
+                Margin="2,0" />
+            
+        </StackLayout>
+        
     </StackLayout>
+    
 </pages:BasePage>
