Added RemoveBorder & SelectAll effects + Refactor
Added back 3 old effects from the library, the RemoveLine / RemoveBorder effects have been combined into a single effect. The select all effect has been extended to support Editor, effects area of the toolkit has been refactored and samples have been added

--- a/XamarinCommunityToolkitSample/App.xaml
+++ b/XamarinCommunityToolkitSample/App.xaml
@@ -19,6 +19,9 @@
         <Color x:Key="NormalButtonTextColor">#FFFFFF</Color>
         <Color x:Key="HeadingLabelTextColor">#5D5D5D</Color>
         <Color x:Key="NormalLabelTextColor">#888888</Color>
+        <Color x:Key="DarkLabelTextColor">#000000</Color>
+        <Color x:Key="DarkLabelPlaceholderColor">#333d47</Color>
+        <Color x:Key="SoftFrameBackgroundColor">#ecf0f9</Color>
 
         <!-- Fonts -->
         <OnPlatform x:TypeArguments="x:String" x:Key="font_bold">
