Removes internationalization through the app (#487)
* Start removal

* Moar removal

* And more

* Cleaning up

* Maybe cleaned up too much...

* Removed actual resource strings

--- a/XamarinCommunityToolkitSample/Pages/Behaviors/UserStoppedTypingBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/UserStoppedTypingBehaviorPage.xaml
@@ -3,7 +3,6 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Behaviors"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx"
                 xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.UserStoppedTypingBehaviorPage">
 
@@ -14,21 +13,21 @@
     <pages:BasePage.Content>
         <StackLayout Spacing="20">
 
-            <Label Text="{x:Static resources:AppResources.UserStoppedTypingBehaviorDescription}"
+            <Label Text="This behavior waits for the user to stop typing and then executes a Command. The waiting threshold is adjustable, as well as there is an option to dismiss the keyboard after the user has stopped typing."
                    Margin="{StaticResource ContentPadding}" />
 
             <Frame Margin="{StaticResource ContentPadding}"
                    CornerRadius="10">
                 
                 <Grid ColumnDefinitions="2*, *">
-                    <Label Text="{x:Static resources:AppResources.UserStoppedTypingBehaviorTimeThresholdOptionLabel}"
+                    <Label Text="User stopped typing time threshold (in ms)"
                            VerticalTextAlignment="Center" />
                     <Entry x:Name="TimeThresholdSetting"
                            Text="1000"
                            Keyboard="Numeric"
                            Grid.Column="1" />
 
-                    <Label Text="{x:Static resources:AppResources.UserStoppedTypingBehaviorMinimumLengthThresholdOptionLabel}"
+                    <Label Text="Minimum length threshold (number of characters)"
                            VerticalTextAlignment="Center"
                            Grid.Row="1" />
                     <Entry x:Name="MinimumLengthThresholdSetting"
@@ -37,7 +36,7 @@
                            Grid.Row="1"
                            Grid.Column="1" />
 
-                    <Label Text="{x:Static resources:AppResources.UserStoppedTypingBehaviorDismissKeyboardOptionLabel}"
+                    <Label Text="Should dismiss keyboard automatically"
                            VerticalTextAlignment="Center"
                            Grid.Row="2" />
                     <Switch x:Name="AutoDismissKeyboardSetting"
@@ -47,7 +46,7 @@
                 </Grid>
             </Frame>
 
-            <SearchBar Placeholder="{x:Static resources:AppResources.UserStoppedTypingBehaviorSearchBarPlaceholderText}" Margin="{StaticResource ContentPadding}">
+            <SearchBar Placeholder="Start searching..." Margin="{StaticResource ContentPadding}">
                 <SearchBar.Behaviors>
                     <behaviors:UserStoppedTypingBehavior Command="{Binding SearchCommand}"
                                                          StoppedTypingTimeThreshold="{Binding Path=Text, Source={x:Reference TimeThresholdSetting}}"
