--- a/XamarinCommunityToolkitSample/Pages/Behaviors/MaxLengthReachedBehaviorPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Behaviors/MaxLengthReachedBehaviorPage.xaml
@@ -3,7 +3,6 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:vm="clr-namespace:Xamarin.CommunityToolkit.Sample.ViewModels.Behaviors"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
-                xmlns:resources="clr-namespace:Xamarin.CommunityToolkit.Sample.Resx"
                 xmlns:behaviors="clr-namespace:Xamarin.CommunityToolkit.Behaviors;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Behaviors.MaxLengthReachedBehaviorPage">
 
@@ -15,21 +14,21 @@
         <ScrollView>
             <StackLayout Spacing="20">
 
-                <Label Text="{x:Static resources:AppResources.MaxLengthReachedBehaviorDescription}"
+                <Label Text="When the MaxLength on an Entry field has been reached, any configured EventHandler gets invoked and a Command gets Executed."
                        Margin="{StaticResource ContentPadding}" />
 
                 <!-- Settings -->
                 <Frame Margin="{StaticResource ContentPadding}"
                        CornerRadius="10">
                     <Grid ColumnDefinitions="2*, *">
-                        <Label Text="{x:Static resources:AppResources.MaxLengthReachedBehaviorMaxLengthSettingLabel}"
+                        <Label Text="MaxLength setting on Entry field"
                                VerticalTextAlignment="Center" />
                         <Entry x:Name="MaxLengthSetting"
                                Text="6"
                                Keyboard="Numeric"
                                Grid.Column="1" />
 
-                        <Label Text="{x:Static resources:AppResources.UserStoppedTypingBehaviorDismissKeyboardOptionLabel}"
+                        <Label Text="Should dismiss keyboard automatically"
                                VerticalTextAlignment="Center"
                                Grid.Row="1" />
                         <Switch x:Name="AutoDismissKeyboardSetting"
@@ -40,10 +39,10 @@
                 </Frame>
 
                 <!-- First Scenario -->
-                <Label Text="{x:Static resources:AppResources.MaxLengthReachedBehaviorFirstScenarioDescription}"
+                <Label Text="When the MaxLength of the first Entry has been reached, the focus will be set to the next Entry field."
                        Margin="{StaticResource ContentPadding}" />
 
-                <Entry Placeholder="{x:Static resources:AppResources.MaxLengthReachedBehaviorEntryPlaceholder}"
+                <Entry Placeholder="Start typing until MaxLength is reached..."
                        MaxLength="{Binding Path=Text, Source={x:Reference MaxLengthSetting}}"
                        Margin="{StaticResource ContentPadding}">
                     <Entry.Behaviors>
@@ -53,15 +52,15 @@
                 </Entry>
 
                 <Entry x:Name="nextEntry"
-                       Placeholder="{x:Static resources:AppResources.MaxLengthReachedBehaviorNextEntryPlaceholder}"
+                       Placeholder="This Entry will then get focus..."
                        Margin="{StaticResource ContentPadding}" />
 
 
                 <!-- Second Scenario -->
-                <Label Text="{x:Static resources:AppResources.MaxLengthReachedBehaviorSecondScenarioDescription}"
+                <Label Text="When the MaxLength of this Entry is reached, a Command is executed. Below are all Command executions shown."
                        Margin="{StaticResource ContentPadding}" />
                 
-                <Entry Placeholder="{x:Static resources:AppResources.MaxLengthReachedBehaviorEntryPlaceholder}"
+                <Entry Placeholder="Start typing until MaxLength is reached..."
                        MaxLength="{Binding Path=Text, Source={x:Reference MaxLengthSetting}}"
                        Margin="{StaticResource ContentPadding}">
                     <Entry.Behaviors>
