RangeSlider: Added events and StepValue https://github.com/xamarin/XamarinCommunityToolkit/issues/376

--- a/XamarinCommunityToolkitSample/Pages/Views/RangeSliderPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Views/RangeSliderPage.xaml
@@ -35,6 +35,7 @@
                 x:Name="RangeSlider"
                 MaximumValue="10"
                 MinimumValue="-10"
+                StepValue="0.01"
                 LowerValue="-10"
                 UpperValue="10"
                 ValueLabelStringFormat="{StaticResource CustomValueLabeStringFormat}"
