--- a/XamarinCommunityToolkit/Resources/Layout/CameraFragment.axml
+++ b/XamarinCommunityToolkit/Resources/Layout/CameraFragment.axml
@@ -7,5 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center"
+        android:layout_centerInParent="true"/>
 </FrameLayout>
