--- a/XamarinCommunityToolkitSample/Pages/Effects/RemoveBorderEffectPage.xaml
+++ b/XamarinCommunityToolkitSample/Pages/Effects/RemoveBorderEffectPage.xaml
@@ -3,7 +3,6 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                 xmlns:pages="clr-namespace:Xamarin.CommunityToolkit.Sample.Pages"
                 xmlns:effects="clr-namespace:Xamarin.CommunityToolkit.Effects;assembly=Xamarin.CommunityToolkit"
-                xmlns:rsx="clr-namespace:Xamarin.CommunityToolkit.Extensions;assembly=Xamarin.CommunityToolkit"
                 x:Class="Xamarin.CommunityToolkit.Sample.Pages.Effects.RemoveBorderEffectPage"
                 Title="RemoveBorderEffect">
     <ContentPage.Content>
@@ -13,19 +12,19 @@
                      Spacing="20"
                      VerticalOptions="Fill">
 
-            <Label Text="{rsx:Translate RemoveBorderLongDescription}"/>
+            <Label Text="The RemoveBorderEffect is an effect that will remove the border from an Entry on iOS and the underline from an entry on Android. This effect has been backported from the original version of this repository."/>
 
             <StackLayout>
-                <Label Text="{rsx:Translate RemoveBorderDefaultEntryLabel}" FontAttributes="Italic"/>
+                <Label Text="Default Entry" FontAttributes="Italic"/>
                 <Frame BackgroundColor="{StaticResource SoftFrameBackgroundColor}" HasShadow="False">
-                    <Entry Placeholder="{rsx:Translate RemoveBorderDefaultEntryPlaceholder}" TextColor="{StaticResource DarkLabelTextColor}" PlaceholderColor="{StaticResource DarkLabelPlaceholderColor}"/>
+                    <Entry Placeholder="I have a border" TextColor="{StaticResource DarkLabelTextColor}" PlaceholderColor="{StaticResource DarkLabelPlaceholderColor}"/>
                 </Frame>
             </StackLayout>
 
             <StackLayout>
-                <Label Text="{rsx:Translate RemoveBorderEffectEntryLabel}" FontAttributes="Italic"/>
+                <Label Text="Entry With Effect" FontAttributes="Italic"/>
                 <Frame BackgroundColor="{StaticResource SoftFrameBackgroundColor}" HasShadow="False">
-                    <Entry Placeholder="{rsx:Translate RemoveBorderEffectEntryPlaceholder}" TextColor="{StaticResource DarkLabelTextColor}" PlaceholderColor="{StaticResource DarkLabelPlaceholderColor}">
+                    <Entry Placeholder="I don't have a border" TextColor="{StaticResource DarkLabelTextColor}" PlaceholderColor="{StaticResource DarkLabelPlaceholderColor}">
                         <Entry.Effects>
                             <effects:RemoveBorderEffect/>
                         </Entry.Effects>
